@@ -1,5 +1,10 @@
 2008-04-22  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
+	* tag V00-22-12
+	* converter: fix to BrowserConverter
+
+2008-04-22  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
+
 	* tag V00-22-11
 	* point to new HLT Development DB at CMSR
 	(src/conf/conf.properties)
